# medilab-api

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 380045340194_initial_schema_users_laboratories_lab_.py
app/: __main__.py  auth.py  config.py  database.py  main.py  models.py  schemas.py
app/routers/: auth.py  bookings.py  catalog.py
tests/: conftest.py  test_bookings.py  test_catalog.py
